[package]
name = "astro_recover"
version = "0.1.0"
edition = "2021"
description = "Astroneer .savegame decoder + FORCE LAND fix (orbit->pad recovery + ExitSuppressionCount), Rust/WASM"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
miniz_oxide = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "z"
lto = true
